include/Win32/CUDA.Runtime.hpp

//-- type declarations -------------------------------------------------------
typedef System::StaticArray<System::UnicodeString, 10> Cuda_Runtime__1;
typedef TcudaError cudaError_t;
typedef int cudaStream_t;
typedef int cudaEvent_t;
//-- var, const, procedure ---------------------------------------------------
extern DELPHI_PACKAGE Cuda_Runtime__1 CUDARTDLLNAMES;
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGetLastError)(void);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGLSetGLDevice)(int device);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGLRegisterBufferObject)(unsigned bufObj);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGraphicsGLRegisterImage)(const Cuda::Import::PCUgraphicsResource resource, unsigned image, unsigned target, unsigned flags);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGraphicsGLRegisterBuffer)(const Cuda::Import::PCUgraphicsResource resource, unsigned buffer, unsigned flags);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGLMapBufferObject)(void * devPtr, unsigned bufObj);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGLUnmapBufferObject)(unsigned bufObj);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGLUnregisterBufferObject)(unsigned bufObj);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGLSetBufferObjectMapFlags)(unsigned bufObj, TCudaGLMapFlags flags);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGLMapBufferObjectAsync)(void * &devPtr, unsigned bufObj, int stream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGLUnmapBufferObjectAsync)(unsigned bufObj, int stream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGraphicsUnregisterResource)(Cuda::Import::PCUgraphicsResource resource);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGraphicsResourceSetMapFlags)(Cuda::Import::PCUgraphicsResource resource, unsigned flags);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGraphicsMapResources)(int count, const Cuda::Import::PCUgraphicsResource resources, int stream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGraphicsUnmapResources)(int count, const Cuda::Import::PCUgraphicsResource resources, int stream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGraphicsResourceGetMappedPointer)(void * &pDevPtr, unsigned &pSize, Cuda::Import::PCUgraphicsResource resource);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaGraphicsSubResourceGetMappedArray)(Cuda::Import::PCUarray &pArray, Cuda::Import::PCUgraphicsResource resource, unsigned arrayIndex, unsigned mipLevel);
extern DELPHI_PACKAGE char * __stdcall (*cudaGetErrorString)(TcudaError error);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaDriverGetVersion)(/* out */ int &driverVersion);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaRuntimeGetVersion)(/* out */ int &runtimeVersion);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaSetDoubleForDevice)(double &d);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaSetDoubleForHost)(double &d);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaStreamCreate)(int &pStream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaStreamDestroy)(int stream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaStreamSynchronize)(int stream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaStreamQuery)(int stream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaEventCreate)(int &event);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaEventCreateWithFlags)(int &event, int flags);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaEventRecord)(int event, int stream);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaEventQuery)(int event);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaEventSynchronize)(int event);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaEventDestroy)(int event);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaEventElapsedTime)(float &ms, int start, int ending);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaWGLGetDevice)(int &device, void * hGpu);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaThreadExit)(void);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaThreadSynchronize)(void);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaThreadSetLimit)(Cuda::Import::TcudaLimit limit, NativeUInt value);
extern DELPHI_PACKAGE TcudaError __stdcall (*cudaThreadGetLimit)(NativeUInt &value, Cuda::Import::TcudaLimit limit);
extern DELPHI_PACKAGE System::UnicodeString __fastcall cudaGetLastErrorString(void);
extern DELPHI_PACKAGE bool __fastcall InitCUDART(void);
extern DELPHI_PACKAGE void __fastcall CloseCUDART(void);
extern DELPHI_PACKAGE bool __fastcall InitCUDARTFromLibrary(const System::WideString LibName);
extern DELPHI_PACKAGE bool __fastcall IsCUDARTInitialized(void);