Source/CUDA.Runtime.pas


cudaGetLastError: function: cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
  { +//****************************************************************************** }
  { -** }
  { -** }
  { -** }
  { =*******************************************************************************/ }
cudaGLSetGLDevice: function(device: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGLRegisterBufferObject: function(bufObj: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGraphicsGLRegisterImage: function(const resource: PCUgraphicsResource; image: Cardinal; target: Cardinal; flags: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGraphicsGLRegisterBuffer: function(const resource: PCUgraphicsResource; buffer: Cardinal; flags: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGLMapBufferObject: function(devPtr: Pointer; bufObj: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGLUnmapBufferObject: function(bufObj: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGLUnregisterBufferObject: function(bufObj: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGLSetBufferObjectMapFlags: function(bufObj: Cardinal; flags: TCudaGLMapFlags): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGLMapBufferObjectAsync: function(var devPtr: Pointer; bufObj: Cardinal; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGLUnmapBufferObjectAsync: function(bufObj: Cardinal; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGraphicsUnregisterResource: function(resource: PCUgraphicsResource): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGraphicsResourceSetMapFlags: function(resource: PCUgraphicsResource; flags: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGraphicsMapResources: function(count: Integer; const resources: PCUgraphicsResource; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGraphicsUnmapResources: function(count: Integer; const resources: PCUgraphicsResource; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGraphicsResourceGetMappedPointer: function(var pDevPtr: TCUdeviceptr;
    var pSize: Cardinal; resource: PCUgraphicsResource): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGraphicsSubResourceGetMappedArray: function(var pArray: PCUarray;
    resource: PCUgraphicsResource; arrayIndex: Cardinal; mipLevel: Cardinal): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaGetErrorString: function(error: cudaError_t): PAnsiChar;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaDriverGetVersion: function(out driverVersion: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaRuntimeGetVersion: function(out runtimeVersion: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
(* ******************************************************************************
 *                                                                              *
 *                                                                              *
 *                                                                              *
 ****************************************************************************** *)

cudaSetDoubleForDevice: function(var d: Double): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaSetDoubleForHost: function(var d: Double): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
(* ******************************************************************************
 *                                                                              *
 *                                                                              *
 *                                                                              *
 ****************************************************************************** *)

cudaStreamCreate: function(var pStream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaStreamDestroy: function(stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaStreamSynchronize: function(stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaStreamQuery: function(stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
(* ******************************************************************************
 *                                                                              *
 *                                                                              *
 *                                                                              *
 ****************************************************************************** *)

cudaEventCreate: function(var event: cudaEvent_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaEventCreateWithFlags: function(var event: cudaEvent_t; flags: Integer): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaEventRecord: function(event: cudaEvent_t; stream: cudaStream_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaEventQuery: function(event: cudaEvent_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaEventSynchronize: function(event: cudaEvent_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaEventDestroy: function(event: cudaEvent_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaEventElapsedTime: function(var ms: Single; start: cudaEvent_t; ending: cudaEvent_t): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaWGLGetDevice: function(var device: Integer; hGpu: HGPUNV): cudaError_t;
{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
(* ******************************************************************************
 *                                                                              *
 *                                                                              *
 *                                                                              *
 ****************************************************************************** *)

cudaThreadExit: function(): cudaError_t;{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaThreadSynchronize: function(): cudaError_t;{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaThreadSetLimit: function(limit: TcudaLimit; value: NativeUInt): cudaError_t;{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
cudaThreadGetLimit: function(var value: NativeUInt; limit: TcudaLimit): cudaError_t;{$IFDEF MSWINDOWS}stdcall;{$ELSE}cdecl;{$ENDIF}
function cudaGetLastErrorString: string;
function InitCUDART: Boolean;
procedure CloseCUDART;
function InitCUDARTFromLibrary(const LibName: WideString): Boolean;
function IsCUDARTInitialized: Boolean;

//--------------------------------------------
implementation
//--------------------------------------------

function cudaGetLastErrorString: string;
begin
  Result := string(cudaGetErrorString(cudaGetLastError));
end;

const
  INVALID_MODULEHANDLE = 0;

var
{$IFDEF MSWINDOWS}
  CUDARTHandle: HINST = INVALID_MODULEHANDLE;
{$ELSE}
  CUDARTHandle: TLibHandle = INVALID_MODULEHANDLE;
{$ENDIF}

function CUDARTGetProcAddress(ProcName: PAnsiChar): Pointer;
begin
  Result := GetProcAddress(CUDARTHandle, ProcName);
end;

function InitCUDART: Boolean;
var
  I: Integer;
begin
  Result := True;
  if CUDARTHandle = INVALID_MODULEHANDLE then
  begin
    for I := 0 to High(CUDARTDLLNAMES) do
    begin
      if InitCUDARTFromLibrary(CUDARTDLLNAMES[I] + '.dll') then
        Exit;
    end;
  end;
  Result := False;
end;

procedure CloseCUDART;
begin
  if CUDARTHandle <> INVALID_MODULEHANDLE then
  begin
    FreeLibrary(CUDARTHandle);
    CUDARTHandle := INVALID_MODULEHANDLE;
  end;
end;

function InitCUDARTFromLibrary(const LibName: WideString): Boolean;
var
  V: Integer;
begin
  CloseCUDART;
  CUDARTHandle := GetModuleHandleW(PWideChar(LibName));
  if CUDARTHandle = INVALID_MODULEHANDLE then
    CUDARTHandle := LoadLibraryW(PWideChar(LibName));

  if CUDARTHandle = INVALID_MODULEHANDLE then
    Exit(False);
